@@ -41,7 +41,7 @@ open_kde()
     fi
 }
 
-open_gnome()
+open_zenity()
 {
     DIALOG=`which zenity`
     if [ $? -eq 0 ]; then
@@ -98,7 +98,7 @@ open_multi_kde()
     fi
 }
 
-open_multi_gnome()
+open_multi_zenity()
 {
     DIALOG=`which zenity`
     if [ $? -eq 0 ]; then
@@ -155,7 +155,7 @@ save_kde()
     fi
 }
 
-save_gnome()
+save_zenity()
 {
     DIALOG=`which zenity`
     if [ $? -eq 0 ]; then
@@ -211,7 +211,7 @@ directory_kde()
     fi
 }
 
-directory_gnome()
+directory_zenity()
 {
     DIALOG=`which zenity`
     if [ $? -eq 0 ]; then
@@ -273,8 +273,8 @@ if [ x"$1" = x"--openfilename" ]; then
         open_kde "$1"
         ;;
 
-        gnome)
-        open_gnome "$1"
+        gnome|xfce)
+        open_zenity "$1"
         ;;
 
         *)
@@ -293,8 +293,8 @@ elif [ x"$1" = x"--openfilenamelist" ]; then
         open_multi_kde "$1"
         ;;
 
-        gnome)
-        open_multi_gnome "$1"
+        gnome|xfce)
+        open_multi_zenity "$1"
         ;;
 
         *)
@@ -313,8 +313,8 @@ elif [ x"$1" = x"--savefilename" ]; then
         save_kde "$1"
         ;;
 
-        gnome)
-        save_gnome "$1"
+        gnome|xfce)
+        save_zenity "$1"
         ;;
 
         *)
@@ -333,8 +333,8 @@ elif [ x"$1" = x"--directory" ]; then
         directory_kde "$1"
         ;;
 
-        gnome)
-        directory_gnome "$1"
+        gnome|xfce)
+        directory_zenity "$1"
         ;;
 
         *)
